Paths for Referring to an Item in the Module Tree

--- a/rusty_jeep_project/rust_the_book_exercise/ch_07_managing_project_structure.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/ch_07_managing_project_structure.ipynb
@@ -156,15 +156,22 @@
    "source": [
     "### Module Cheat Sheet\n",
     "\n",
-    "Here we provide a quick reference on how modules, paths, the use keyword, and  \n",
-    "the pub keyword work in the compiler, and how most developers organize their  \n",
-    "code. We’ll be going through examples of each of these rules throughout this  \n",
-    "chapter, but this is a great place to refer to as a reminder of how modules  \n",
-    "work.\n",
+    "Here we provide a quick reference on how :  \n",
+    "\n",
+    "- **`modules`**, \n",
+    "- **`paths`**, \n",
+    "- the **`use`** keyword, and  \n",
+    "- the **`pub`** keyword  \n",
+    "\n",
+    "work in the compiler, and how most developers organize their code.  We’ll be  \n",
+    "going through examples of each of these rules throughout this chapter, but this  \n",
+    "is a great place to refer to as a reminder of how modules work.  \n",
     "\n",
     "- **`Start from the crate root:`** When compiling a crate, the compiler first  \n",
-    "looks in the crate root file (usually src/lib.rs for a library crate or  \n",
-    "src/main.rs for a binary crate) for code to compile.\n",
+    "looks in the crate root file :  \n",
+    "    - usually src/lib.rs for a **`library crate`** or  \n",
+    "    - src/main.rs for a **`binary crate`**  \n",
+    "    - for **`code to compile`**.\n",
     "- **`Declaring modules:`** In the crate root file, you can declare new modules;  \n",
     "say, you declare a “garden” module with mod garden;. The compiler will look for  \n",
     "the module’s code in these places:\n",
@@ -299,6 +306,318 @@
     "}   // closure ends\n",
     "    // plant(b) goes out of scope\n",
     "    // plant(a) goes out of scope"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grouping Related Code in Modules\n",
+    "\n",
+    "Modules let us organize code within a crate for readability and easy reuse.  \n",
+    "Modules also allow us to control the privacy of items, because code within a  \n",
+    "module is private by default. Private items are internal implementation details  \n",
+    "not available for outside use. We can choose to make modules and the items  \n",
+    "within them public, which exposes them to allow external code to use and depend  \n",
+    "on them.\n",
+    "\n",
+    "As an example, let’s write a library crate that provides the functionality of a  \n",
+    "restaurant. We’ll define the signatures of functions but leave their bodies  \n",
+    "empty to concentrate on the organization of the code, rather than the  \n",
+    "implementation of a restaurant.\n",
+    "\n",
+    "In the restaurant industry, some parts of a restaurant are referred to as front  \n",
+    "of house and others as back of house. Front of house is where customers are;  \n",
+    "this encompasses where the hosts seat customers, servers take orders and  \n",
+    "payment, and bartenders make drinks. Back of house is where the chefs and cooks  \n",
+    "work in the kitchen, dishwashers clean up, and managers do administrative work.  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To structure our crate in this way, we can organize its functions into nested  \n",
+    "modules. Create a new library named restaurant by running  \n",
+    "`cargo new restaurant --lib;` then enter the code in Listing 7-1 into src/lib.rs  \n",
+    "to define some modules and function signatures. Here’s the front of house  \n",
+    "section:\n",
+    "\n",
+    "> Filename: src/lib.rs\n",
+    "\n",
+    "```rust\n",
+    "mod front_of_house {\n",
+    "    mod hosting {\n",
+    "        fn add_to_waitlist() {}\n",
+    "\n",
+    "        fn seat_at_table() {}\n",
+    "    }\n",
+    "\n",
+    "    mod serving {\n",
+    "        fn take_order() {}\n",
+    "\n",
+    "        fn serve_order() {}\n",
+    "\n",
+    "        fn take_payment() {}\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "> Listing 7-1: A front_of_house module containing other modules that then  \n",
+    "contain functions\n",
+    "\n",
+    "We define a module with the `mod` keyword followed by the name of the module  \n",
+    "(in this case, front_of_house). The body of the module then goes inside curly  \n",
+    "brackets. Inside modules, we can place other modules, as in this case with the  \n",
+    "modules hosting and serving. Modules can also hold definitions for other items,  \n",
+    "such as : \n",
+    "- structs, \n",
+    "- enums, \n",
+    "- constants, \n",
+    "- traits, \n",
+    "- functions.\n",
+    "\n",
+    "> By using modules, we can group related definitions together and name why they’re  \n",
+    "related. Programmers using this code can navigate the code based on the groups  \n",
+    "rather than having to read through all the definitions, making it easier to find  \n",
+    "the definitions relevant to them. Programmers adding new functionality to this  \n",
+    "code would know where to place the code to keep the program organized."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Earlier, we mentioned that `src/main.rs` and `src/lib.rs` are called crate  \n",
+    "roots. The reason for their name is that the contents of either of these two  \n",
+    "files form a module named crate at the root of the crate’s module structure,  \n",
+    "known as the module tree.\n",
+    "\n",
+    "> Listing 7-2 shows the module tree for the structure in Listing 7-1.\n",
+    "\n",
+    "```sh\n",
+    "crate\n",
+    " └── front_of_house\n",
+    "     ├── hosting\n",
+    "     │   ├── add_to_waitlist\n",
+    "     │   └── seat_at_table\n",
+    "     └── serving\n",
+    "         ├── take_order\n",
+    "         ├── serve_order\n",
+    "         └── take_payment\n",
+    "```\n",
+    "\n",
+    "> Listing 7-2: The module tree for the code in Listing 7-1\n",
+    "\n",
+    "This tree shows how some of the modules nest inside one another; for example,  \n",
+    "`hosting` nests inside `front_of_house.` The tree also shows that some modules are  \n",
+    "siblings to each other, meaning they’re defined in the same module; `hosting` and  \n",
+    "`serving` are siblings defined within `front_of_house`. If module A is contained  \n",
+    "inside module B, we say that module A is the child of module B and that module  \n",
+    "B is the parent of module A. Notice that the entire module tree is rooted under  \n",
+    "the implicit module named `crate`.\n",
+    "\n",
+    "> The module tree might remind you of the `filesystem’s directory tree` on your  \n",
+    "computer; this is a very `apt comparison`! Just like directories in a filesystem,  \n",
+    "you use modules to organize your code. And just like files in a directory, we  \n",
+    "need a way to find our modules."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Paths for Referring to an Item in the Module Tree\n",
+    "---\n",
+    "\n",
+    "To show Rust where to find an item in a module tree, we use a path in the same  \n",
+    "way we use a path when navigating a filesystem. To call a function, we need to  \n",
+    "know its path.\n",
+    "\n",
+    "A path can take two forms:\n",
+    "\n",
+    "- An **`absolute path`** is the full path starting from a crate root; for code  \n",
+    "from an external crate, the absolute path begins with the crate name, and for  \n",
+    "code from the current crate, it starts with the literal crate.  \n",
+    "- A **`relative path`** starts from the current module and uses self, super, or  \n",
+    "an identifier in the current module.  \n",
+    "\n",
+    "Both absolute and relative paths are followed by one or more identifiers  \n",
+    "separated by double colons (::)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Returning to Listing 7-1, say we want to call the `add_to_waitlist` function. This  \n",
+    "is the same as asking:  \n",
+    "\n",
+    "- what’s the path of the `add_to_waitlist` function?  \n",
+    "\n",
+    "Listing 7-3 contains Listing 7-1 with some of the modules and functions  \n",
+    "removed.\n",
+    "\n",
+    "> Filename: src/lib.rs\n",
+    "\n",
+    "```rust\n",
+    "mod front_of_house {\n",
+    "    mod hosting {\n",
+    "        fn add_to_waitlist() {}\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "pub fn eat_at_restaurant() {\n",
+    "    // Absolute path\n",
+    "    // We can use the **`crate`** keyword to start an absolute path because\n",
+    "    // - add_to_waitlist function is defined in the same crate as eat_at_restaurant\n",
+    "    crate::front_of_house::hosting::add_to_waitlist();\n",
+    "\n",
+    "    // Relative path\n",
+    "    // Starting with a module name means that the path is relative\n",
+    "    front_of_house::hosting::add_to_waitlist();\n",
+    "}\n",
+    "\n",
+    "/*\n",
+    "BY DEFAULT : @note Our preference in general is to specify absolute paths because it’s  \n",
+    "more likely we’ll want to move code definitions and item calls independently of  \n",
+    "each other. \n",
+    "*/\n",
+    "\n",
+    "```\n",
+    "\n",
+    "> Listing 7-3: Calling the add_to_waitlist function using absolute and relative  \n",
+    "paths\n",
+    "\n",
+    "We’ll show two ways to call the `add_to_waitlist` function from a new function  \n",
+    "`eat_at_restaurant` defined in the crate root. These paths are correct, but  \n",
+    "there’s another problem remaining that will prevent this example from  \n",
+    "compiling as-is. We’ll explain why in a bit.  \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first time we call the add_to_waitlist function in eat_at_restaurant, we use  \n",
+    "an absolute path. The add_to_waitlist function is defined in the same crate as  \n",
+    "eat_at_restaurant, which means we can use the `crate` keyword to start an  \n",
+    "absolute path. We then include each of the successive modules until we make our  \n",
+    "way to add_to_waitlist. You can imagine a filesystem with the same structure:  \n",
+    "we’d specify the path /front_of_house/hosting/add_to_waitlist to run the  \n",
+    "add_to_waitlist program; using the crate name to start from the crate root is  \n",
+    "like using / to start from the filesystem root in your shell.\n",
+    "\n",
+    "The second time we call add_to_waitlist in eat_at_restaurant, we use a relative  \n",
+    "path. The path starts with front_of_house, the name of the module defined at the  \n",
+    "same level of the module tree as eat_at_restaurant. Here the filesystem  \n",
+    "equivalent would be using the path front_of_house/hosting/add_to_waitlist.  \n",
+    "Starting with a module name means that the path is relative.\n",
+    "\n",
+    "Choosing whether to use a relative or absolute path is a decision you’ll make  \n",
+    "based on your project, and depends on whether you’re more likely to move item  \n",
+    "definition code separately from or together with the code that uses the item.  \n",
+    "For example :  \n",
+    "- If we move the `front_of_house` module AND the `eat_at_restaurant` function into  \n",
+    "a module named `customer_experience`, we’d need to update the absolute path to  \n",
+    "`add_to_waitlist`, but the `relative path would still be valid`. \n",
+    "- However, if we moved the `eat_at_restaurant` function separately into a module  \n",
+    "named `dining`, the `absolute` path to the `add_to_waitlist` call would stay the same,  \n",
+    "but the relative path would need to be updated.  \n",
+    "\n",
+    "> BY DEFAULT : @note Our preference in general is to specify absolute paths because it’s  \n",
+    "more likely we’ll want to move code definitions and item calls independently of  \n",
+    "each other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "module `hosting` is private",
+     "output_type": "error",
+     "traceback": [
+      "    crate::front_of_house::hosting::add_to_waitlist();",
+      "                           ^^^^^^^ private module",
+      "module `hosting` is private"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "module `hosting` is private",
+     "output_type": "error",
+     "traceback": [
+      "    front_of_house::hosting::add_to_waitlist();",
+      "                    ^^^^^^^ private module",
+      "module `hosting` is private"
+     ]
+    }
+   ],
+   "source": [
+    "mod front_of_house {\n",
+    "    mod hosting {\n",
+    "        fn add_to_waitlist() {}\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "pub fn eat_at_restaurant() {\n",
+    "    // Absolute path\n",
+    "    // We can use the **`crate`** keyword to start an absolute path because\n",
+    "    // - add_to_waitlist function is defined in the same crate as eat_at_restaurant\n",
+    "    crate::front_of_house::hosting::add_to_waitlist();\n",
+    "\n",
+    "    // Relative path\n",
+    "    // Starting with a module name means that the path is relative\n",
+    "    front_of_house::hosting::add_to_waitlist();\n",
+    "}\n",
+    "\n",
+    "/*\n",
+    "BY DEFAULT : @note Our preference in general is to specify absolute paths because it’s  \n",
+    "more likely we’ll want to move code definitions and item calls independently of  \n",
+    "each other. \n",
+    "*/"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s try to compile Listing 7-3 and find out why it won’t compile yet! The  \n",
+    "error we get is shown above ^\n",
+    "\n",
+    "The error messages say that module hosting is private. In other words, we have  \n",
+    "the correct paths for the hosting module and the add_to_waitlist function, but  \n",
+    "Rust won’t let us use them because it doesn’t have access to the private  \n",
+    "sections. In Rust, all items (functions, methods, structs, enums, modules, and  \n",
+    "constants) are private to parent modules by default. If you want to make an item  \n",
+    "like a function or struct private, you put it in a module.\n",
+    "\n",
+    "Items in a parent module can’t use the private items inside child modules, but  \n",
+    "items in child modules can use the items in their ancestor modules. This is  \n",
+    "because child modules wrap and hide their implementation details, but the child  \n",
+    "modules can see the context in which they’re defined. To continue with our  \n",
+    "metaphor, think of the privacy rules as being like the back office of a  \n",
+    "restaurant: what goes on in there is private to restaurant customers, but office  \n",
+    "managers can see and do everything in the restaurant they operate.\n",
+    "\n",
+    "Rust chose to have the module system function this way so that hiding inner  \n",
+    "implementation details is the default. That way, you know which parts of the  \n",
+    "inner code you can change without breaking outer code. However, Rust does give  \n",
+    "you the option to expose inner parts of child modules’ code to outer ancestor  \n",
+    "modules by using the **`pub`** keyword to make an item public."
    ]
   }
  ],
