WIP : smart pointers, may drop back to do Traits

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers.ipynb
@@ -557,6 +557,401 @@
     "we’ll discuss in the rest of this chapter. Let’s explore these two traits in  \n",
     "more detail."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Treating Smart Pointers Like Regular References with the `Deref` Trait\n",
+    "---\n",
+    "Implementing the `Deref` trait allows you to customize the behavior of the  \n",
+    "dereference operator `*` (not to be confused with the multiplication or glob  \n",
+    "operator). By implementing `Deref` in such a way that a smart pointer can be  \n",
+    "treated like a regular reference, you can write code that operates on references  \n",
+    "and use that code with smart pointers too.\n",
+    "\n",
+    "Let’s first look at how the dereference operator works with regular references.  \n",
+    "Then we’ll try to define a custom type that behaves like Box<T>, and see why the  \n",
+    "dereference operator doesn’t work like a reference on our newly defined type.  \n",
+    "We’ll explore how implementing the `Deref` trait makes it possible for smart  \n",
+    "pointers to work in ways similar to references. Then we’ll look at Rust’s deref  \n",
+    "coercion feature and how it lets us work with either references or smart  \n",
+    "pointers.\n",
+    "\n",
+    "> Note: there’s one big difference between the MyBox<T> type we’re about to  \n",
+    "build and the real Box<T>: our version will not store its data on the heap. We  \n",
+    "are focusing this example on Deref, so where the data is actually stored is less  \n",
+    "important than the pointer-like behavior.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Following the Pointer to the Value\n",
+    "\n",
+    "A regular reference is a type of pointer, and one way to think of a pointer is  \n",
+    "as an arrow to a value stored somewhere else. In Listing 15-6, we create a  \n",
+    "reference to an i32 value and then use the dereference operator to follow the  \n",
+    "reference to the value:\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let x = 5;   // x is assigned 5\n",
+    "    let y = &x;  // y is assigned the address of x\n",
+    "\n",
+    "    assert_eq!(5, x);  // 5 is the value at x\n",
+    "    assert_eq!(5, *y); // 5 is the value we get FOLLOWING where y is pointed to\n",
+    "    // assert_eq!(5, y);  // compilation error : 5 and y (a pointer) are different types\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The variable x holds an i32 value 5. We set y equal to a reference to x. We can  \n",
+    "assert that x is equal to 5. However, if we want to make an assertion about the  \n",
+    "value in y, we have to use *y to follow the reference to the value it’s pointing  \n",
+    "to (hence dereference) so the compiler can compare the actual value. Once we  \n",
+    "dereference y, we have access to the integer value y is pointing to that we can  \n",
+    "compare with 5.\n",
+    "\n",
+    "If we tried to write assert_eq!(5, y); instead, we would get this compilation  \n",
+    "error:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo run\n",
+    "   Compiling deref-example v0.1.0 (file:///projects/deref-example)\n",
+    "error[E0277]: can't compare `{integer}` with `&{integer}`\n",
+    " --> src/main.rs:6:5\n",
+    "  |\n",
+    "6 |     assert_eq!(5, y);\n",
+    "  |     ^^^^^^^^^^^^^^^^ no implementation for `{integer} == &{integer}`\n",
+    "  |\n",
+    "  = help: the trait `PartialEq<&{integer}>` is not implemented for `{integer}`\n",
+    "  = help: the following other types implement trait `PartialEq<Rhs>`:\n",
+    "            f32\n",
+    "            f64\n",
+    "            i128\n",
+    "            i16\n",
+    "            i32\n",
+    "            i64\n",
+    "            i8\n",
+    "            isize\n",
+    "          and 6 others\n",
+    "  = note: this error originates in the macro `assert_eq` (in Nightly builds,  \n",
+    "  run with -Z macro-backtrace for more info)\n",
+    "\n",
+    "For more information about this error, try `rustc --explain E0277`.\n",
+    "error: could not compile `deref-example` due to previous error\n",
+    "```\n",
+    "\n",
+    "Comparing a number and a reference to a number isn’t allowed because they’re  \n",
+    "different types. We **must use the dereference operator to follow** the reference  \n",
+    "to the **value it’s pointing to**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using Box<T> Like a Reference\n",
+    "\n",
+    "We can rewrite the code in Listing 15-6 to use a Box<T> instead of a reference;  \n",
+    "the dereference operator used on the Box<T> in Listing 15-7 functions in the  \n",
+    "same way as the dereference operator used on the reference in Listing 15-6:\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let x = 5;\n",
+    "    let y = Box::new(x); // y is changed from a pointer to a Box reference\n",
+    "\n",
+    "    assert_eq!(5, x);\n",
+    "    assert_eq!(5, *y);  // we get the same value 5 with Box::new(x) as with &x \n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 15-7: Using the dereference operator on a Box<i32>\n",
+    "\n",
+    "The main difference between Listing 15-7 and Listing 15-6 is that here we set y  \n",
+    "to be an instance of a Box<T> pointing to a copied value of x rather than a  \n",
+    "reference pointing to the value of x. In the last assertion, we can use the  \n",
+    "dereference operator to follow the pointer of the Box<T> in the same way that  \n",
+    "we did when y was a reference. Next, we’ll explore what is special about Box<T>  \n",
+    "that enables us to use the dereference operator by defining our own type."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining Our Own Smart Pointer\n",
+    "\n",
+    "Let’s build a smart pointer similar to the Box<T> type provided by the standard  \n",
+    "library to experience how smart pointers behave differently from references by  \n",
+    "default. Then we’ll look at how to add the ability to use the dereference  \n",
+    "operator.\n",
+    "\n",
+    "The Box<T> type is ultimately defined as a tuple struct with one element, so  \n",
+    "Listing 15-8 defines a MyBox<T> type in the same way. We’ll also define a new  \n",
+    "function to match the new function defined on Box<T>.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "struct MyBox<T>(T);\n",
+    "\n",
+    "impl<T> MyBox<T>{\n",
+    "    fn new(x:T) -> MyBox<T>{\n",
+    "        MyBox(x)\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 15-8: Defining a MyBox<T> type\n",
+    "\n",
+    "We define a struct named MyBox and declare a generic parameter T, because we  \n",
+    "want our type to hold values of any type. The MyBox type is a tuple struct with  \n",
+    "one element of type T. The MyBox::new function takes one parameter of type T and  \n",
+    "returns a MyBox instance that holds the value passed in.  \n",
+    "\n",
+    "Let’s try adding the main function in Listing 15-7 to Listing 15-8 and changing  \n",
+    "it to use the MyBox<T> type we’ve defined instead of Box<T>. The code in  \n",
+    "Listing 15-9 won’t compile because Rust doesn’t know how to dereference MyBox.  \n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let x = 5;\n",
+    "    let y = MyBox::new(x);\n",
+    "\n",
+    "    assert_eq!(5, x);\n",
+    "    assert_eq!(5, *y);  // error: type `MyBox<{integer}>` cannot be dereferenced\n",
+    "                        // To enable the * operator, we need to implement the Deref trait\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "> Listing 15-9: Attempting to use MyBox<T> in the same way we used references and Box<T>\n",
+    "\n",
+    "Here’s the resulting compilation error:  \n",
+    "\n",
+    "```sh\n",
+    "$ cargo run\n",
+    "   Compiling deref-example v0.1.0 (file:///projects/deref-example)\n",
+    "error[E0614]: type `MyBox<{integer}>` cannot be dereferenced\n",
+    "  --> src/main.rs:14:19\n",
+    "   |\n",
+    "14 |     assert_eq!(5, *y);\n",
+    "   |                   ^^\n",
+    "\n",
+    "For more information about this error, try `rustc --explain E0614`.\n",
+    "error: could not compile `deref-example` due to previous error\n",
+    "```\n",
+    "\n",
+    "Our MyBox<T> type can’t be dereferenced because we haven’t implemented that  \n",
+    "ability on our type. To enable dereferencing with the * operator, we implement  \n",
+    "the Deref trait."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Treating a Type Like a Reference by Implementing the `Deref` Trait\n",
+    "\n",
+    "As discussed in the “Implementing a Trait on a Type” section of Chapter 10, to  \n",
+    "implement a trait, we need to provide implementations for the trait’s required  \n",
+    "methods. The `Deref` trait, provided by the standard library, requires us to  \n",
+    "implement one method named deref that `borrows` self and `returns a reference` to  \n",
+    "the inner data. Listing 15-10 contains an implementation of Deref to add to the  \n",
+    "definition of MyBox:\n",
+    "\n",
+    "Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "use std::ops::Deref;\n",
+    "\n",
+    "impl<T> Deref for MyBox<T>{\n",
+    "    type Target = T;\n",
+    "    fn deref(&self) -> &Self::Target{\n",
+    "        &self.0\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// @audit - why is there an error when I run this cell twice?\n",
+    "// ANSWER : We need to clear the previous implementation of Deref\n",
+    "// REPL we need to reset manually -> Developer : Reload Window"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 15-10: Implementing Deref on MyBox<T>\n",
+    "\n",
+    "- The type `Target = T;` syntax defines an associated type for the `Deref` trait  \n",
+    "to use. Associated types are a slightly different way of declaring a generic  \n",
+    "parameter, but you don’t need to worry about them for now; we’ll cover them in  \n",
+    "more detail in Chapter 19.  \n",
+    "\n",
+    "- We fill in the body of the deref method with `&self.0` so deref returns a  \n",
+    "reference to the value we want to access with the * operator; recall from the  \n",
+    "“Using Tuple Structs without Named Fields to Create Different Types” section of  \n",
+    "Chapter 5 that `.0 accesses the first value in a tuple struct`. The main  \n",
+    "function in Listing 15-9 that calls * on the MyBox<T> value now compiles, and  \n",
+    "the assertions pass!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Without the Deref trait, the compiler can only dereference & references. The  \n",
+    "deref method gives the compiler the ability to take a value of any type that  \n",
+    "implements Deref and call the deref method to get a & reference that it knows  \n",
+    "how to dereference.\n",
+    "\n",
+    "When we entered *y in Listing 15-9, behind the scenes Rust actually ran this  \n",
+    "code:  \n",
+    "\n",
+    "*(y.deref())  \n",
+    "\n",
+    "Rust substitutes the * operator with a call to the deref method and then a plain  \n",
+    "dereference so we don’t have to think about whether or not we need to call the  \n",
+    "deref method. This Rust feature lets us write code that functions identically  \n",
+    "whether we have a regular reference or a type that implements Deref."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The reason the deref method returns a reference to a value, and that the plain  \n",
+    "dereference outside the parentheses in *(y.deref()) is still necessary, is to  \n",
+    "do with the ownership system. If the deref method returned the value directly  \n",
+    "instead of a reference to the value, the value would be moved out of self. We  \n",
+    "don’t want to take ownership of the inner value inside MyBox<T> in this case or  \n",
+    "in most cases where we use the dereference operator.  \n",
+    "\n",
+    "Note that the * operator is replaced with a call to the deref method and then a  \n",
+    "call to the * operator just once, each time we use a * in our code. Because the  \n",
+    "substitution of the * operator does not recurse infinitely, we end up with data  \n",
+    "of type i32, which matches the 5 in assert_eq! in Listing 15-9.  "
+   ]
   }
  ],
  "metadata": {
